--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-picker/picker": "^2.10.2",
+    "@react-navigation/stack": "^7.1.1",
     "expo": "~52.0.23",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
